--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "swr": "^2.2.0",
     "vue-cookies": "^1.8.3",
     "vue-meta": "^2.4.0",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-styled-components": "^1.6.0"
   }
 }
